--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -11,19 +11,24 @@
 <body>
   <div class="jumbotron">
     <form>
+
   <div class="form-group">
-    <label for="exampleInputEmail1">Username</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter username">
+    <label for="InputUsername">Username</label>
+    <input type="text" class="form-control" id="InputUsername" aria-describedby="UsernameHelp" placeholder="Enter username">
   </div>
+
   <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <label for="InputPassword">Password</label>
+    <input type="password" class="form-control" id="InputPassword" placeholder="Password">
   </div>
+
   <div class="form-group form-check">
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
     <label class="form-check-label" for="exampleCheck1">Check me out</label>
   </div>
+
   <button type="submit" class="btn btn-primary">Submit</button>
+
 </form>
   </div>
 
