--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -7,6 +7,7 @@
 
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <h1> Sign up ! </h1>
 </head>
 <body>
   <div class="jumbotron">
@@ -23,7 +24,7 @@
   </div>
 
   <div class="form-group">
-    <label for="InputPassword1">Password</label>
+    <label for="InputPassword">Password</label>
     <input type="password" class="form-control" id="InputPassword" placeholder="Password">
   </div>
 
