--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -2,36 +2,65 @@
 <html>
 <head>
   <!-- Required meta tags -->
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-      <!-- Bootstrap CSS -->
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
 <body>
-  <div class="jumbotron">
-    <form>
+<div class="jumbotron">
+  <form>
 
-  <div class="form-group">
-    <label for="InputUsername">Username</label>
-    <input type="text" class="form-control" id="InputUsername" aria-describedby="UsernameHelp" placeholder="Enter username">
-  </div>
+    <div class="form-group">
+      <label for="InputUsername">Username</label>
+      <input type="text" class="form-control" id="InputUsername" aria-describedby="UsernameHelp" placeholder="Enter username">
+    </div>
 
-  <div class="form-group">
-    <label for="InputPassword">Password</label>
-    <input type="password" class="form-control" id="InputPassword" placeholder="Password">
-  </div>
+    <div class="form-group">
+      <label for="InputPassword">Password</label>
+      <input type="password" class="form-control" id="InputPassword" placeholder="Password">
+    </div>
 
-  <div class="form-group form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-  </div>
+    <div class="form-group form-check">
+      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    </div>
 
-  <button type="submit" class="btn btn-primary">Submit</button>
+    <button id="LoginBtn" type="submit" class="btn btn-primary">Submit</button>
 
-</form>
-  </div>
+  </form>
+</div>
 
 
 </body>
+<script>
+    $("#LoginBtn").click(function(e){
+        e.preventDefault();
+        var data = null;
+
+        var xhr = new XMLHttpRequest();
+        xhr.withCredentials = true;
+
+        xhr.addEventListener("readystatechange", function () {
+            console.log(this.readyState)
+            if (this.readyState === 4) {
+                if(this.status === 401){
+                    window.alert("wrong credantials");
+                    return;
+                }
+                cookie = JSON.parse(this.responseText)
+                localStorage.setItem('token', cookie.access_token);
+                window.location.href = "/index.html";
+
+            }
+        });
+
+        xhr.open("POST", "/oauth/token?grant_type=password&username=" +$("#InputUsername").val() +"&password="+ $("#InputPassword").val());
+        xhr.setRequestHeader("authorization", "Basic bXktdHJ1c3RlZC1jbGllbnQ6c2VjcmV0");
+        xhr.setRequestHeader("cache-control", "no-cache");
+        xhr.setRequestHeader("postman-token", "6397a2de-9e32-ebe1-9556-478a7a649330");
+        xhr.send(data)
+    });
+</script>
 </html>
