--- a/src/main/resources/static/place.html
+++ b/src/main/resources/static/place.html
@@ -9,9 +9,9 @@
 </head>
 <body ng-app="myApp" >
 <div ng-controller="navbarcontroller" ng-include="'fragments/navbar.htm'"></div>
-<div ng-controller="placeController" ng-include="'fragments/places.htm'"></div>
+<div ng-controller="placeViewController" ng-include="'fragments/place.htm'"></div>
 <script src="js/nav.js"></script>
-<script src="js/places.js"></script>
+<script src="js/place.js"></script>
 
 
 </body>
