--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -15,12 +15,12 @@
 
   <div class="form-group">
     <label for="InputUsername">Username</label>
-    <input type="text" class="form-control" id="InputUsername" aria-describedby="UsernameHelp" placeholder="Enter username">
+    <input type="commentText" class="form-control" id="InputUsername" aria-describedby="UsernameHelp" placeholder="Enter username">
   </div>
 
   <div class="form-group">
     <label for="InputEmail">Email</label>
-    <input type="text" class="form-control" id="InputEmail" placeholder="Email">
+    <input type="commentText" class="form-control" id="InputEmail" placeholder="Email">
   </div>
 
   <div class="form-group">
@@ -30,12 +30,12 @@
 
   <div class="form-group">
     <label for="InputFirstName">First Name</label>
-    <input type="text" class="form-control" id="InputFirstName" placeholder="First Name">
+    <input type="commentText" class="form-control" id="InputFirstName" placeholder="First Name">
   </div>
 
   <div class="form-group">
     <label for="InputLastName">Last Name</label>
-    <input type="text" class="form-control" id="InputLastName" placeholder="Last Name">
+    <input type="commentText" class="form-control" id="InputLastName" placeholder="Last Name">
   </div>
 
 
