Rating, approve places

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
 <body ng-app="myApp">
 <div ng-controller="navbarcontroller" ng-include="'fragments/navbar.htm'"></div>
 <div ng-controller="placeController" ng-include="'fragments/places.htm'"></div>
-
+<div  ng-include="'fragments/footer.htm'"></div>
 <script src="js/nav.js"></script>
 <script src="js/places.js"></script>
 
