--- a/src/main/resources/static/saveplace.html
+++ b/src/main/resources/static/saveplace.html
@@ -7,12 +7,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <link rel="stylesheet" href="css/main.css">
 </head>
-<body ng-app="myApp" >
+<body ng-app="myApp">
 <div ng-controller="navbarcontroller" ng-include="'fragments/navbar.htm'"></div>
-<div ng-controller="placeViewController" ng-include="'fragments/place.htm'"></div>
+<div ng-include="'fragments/saveplace.htm'"></div>
 <div  ng-include="'fragments/footer.htm'"></div>
 <script src="js/nav.js"></script>
-<script src="js/place.js"></script>
+<script src="js/saveplace.js"></script>
 
 
 </body>
